models.py数据库迁移完成，完成用户登录，但好像还有点小问题

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,12 @@
     {% endif %}
   </head>
   <body>
-  liglblog: <a href="/index">首页</a>
+  <div>liglblog:
+   <a href="/index">首页</a>
+  {% if g.user.is_authenticated %}
+  | <a href="logout">Logout</a>
+  {% endif %}
+  </div>
   <hr>
     {% block content %}{% endblock %}
   </body>
