最简单的登录操作

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,8 @@
-<!-- extend from base layout -->
-{% extends "base.html" %}
-{% block content %}
-    <div><p>登录成功，欢迎来到这里！</p></div>
-{% endblock %}
+<html>
+<head>
+  <title>Home</title>
+</head>
+<body>
+  <h1 style="font-style:italic">Home</h1>
+</body>
+</html>
