--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,10 +8,8 @@
   </head>
   <body>
   <div>liglblog:
-   <a href="/index">首页</a>
-  {% if g.user.is_authenticated %}
-  | <a href="logout">Logout</a>
-  {% endif %}
+  <a href="/index">首页</a>
+  <a href="/login">登录</a>
   </div>
   <hr>
     {% block content %}{% endblock %}
