--- a/app/templates/login_ok.html
+++ b/app/templates/login_ok.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Login_Ok</title>
+  <title>Welcome, {{ username }}</title>
 </head>
 <body>
-    <p>这里是login_ok</p>
+  <p>Welcome, {{ username }}!</p>
 </body>
 </html>
