增加了mc客户端，仅支持列出存储捅，以及列出某一个存储桶的详情

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,6 +3,7 @@
   <title>Home</title>
 </head>
 <body>
+<div>点击<a href="/login">这里</a>登录</div>
   <h1 style="font-style:italic">Home</h1>
 </body>
 </html>
