--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -11,7 +11,7 @@
     <legend>Please sign in:</legend>
     <p><input name="username" placeholder="Username" value="{{ username }}"></p>
     <p><input name="password" placeholder="Password" type="password"></p>
-    <p><button type="submit">Sign In</button></p>
+      <p><button type="submit">Sign In</button> <button type="button"><a href="/register">Sing Up</a></button></p>
   </form>
 </body>
 </html>
