--- a/app/templates/upload_file.html
+++ b/app/templates/upload_file.html
@@ -1,12 +1,7 @@
-<html>
-<head>
-  <title>Welcome, {{ username }}</title>
-</head>
-<body>
-  <p>Welcome, {{ username }}!</p>
+<!doctype html>
+<title>Upload new File</title>
+<h1>Upload new File</h1>
 <form action="" method=post enctype=multipart/form-data>
   <p><input type=file name=file>
      <input type=submit value=Upload>
 </form>
-</body>
-</html>
